[project]
name = "blackmarble-ntl-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Kokla", email = "jan.kokla@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bottleneck>=1.6.0",
    "dask>=2026.3.0",
    "earthengine-api>=1.7.26",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "xarray>=2026.4.0",
    "xee>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackmarble_toolkit"]
